adding bookmark section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="home_title">Home</string>
     <string name="home_tap_to_load_content">Tap to load content</string>
     <string name="home_top_section_title">Top stories for you</string>
+    <string name="home_bookmarked_section_title">Recent Bookmarked</string>
     <string name="home_popular_section_title">Most Popular</string>
     <string name="home_post_min_read">%1$s - %2$d min read</string>
     <string name="home_post_based_on_history">BASED ON YOUR HISTORY</string>
