--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="home_post_min_read">%1$s - %2$d min read</string>
     <string name="home_post_based_on_history">BASED ON YOUR HISTORY</string>
     <string name="home_search">Search articles</string>
+    <string name="view_more">View More</string>
 
     <!-- Article Screen -->
     <string name="article_published_in">Published in: %s</string>
@@ -22,4 +23,6 @@
     <string name="interests_section_topics">Topics</string>
     <string name="interests_section_people">People</string>
     <string name="interests_section_publications">Publications</string>
+
+
 </resources>
